fix: fix scanning for standalone and launcher games