@@ -8,10 +8,12 @@ import com.nexus.repository.GameRepository;
 import java.io.File;
 import java.io.IOException;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.List;
 
 /**
  * Service responsible for launching games.
- * Handles Steam (via protocol), Epic (direct exe), and System games.
+ * Handles Steam (via protocol), Epic (via protocol or direct), and System games.
  */
 public class GameLauncher {
 
@@ -27,10 +29,6 @@ public class GameLauncher {
 
     /**
      * Launches a game based on its platform.
-     *
-     * @param game The game to launch
-     * @return true if launch was successful, false otherwise
-     * @throws GameLaunchException if launch fails
      */
     public boolean play(Game game) throws GameLaunchException {
         if (game == null) {
@@ -45,10 +43,18 @@ public class GameLauncher {
 
         boolean success;
         try {
-            if (game.getPlatform() == Platform.STEAM) {
-                success = launchSteamGame(game);
-            } else {
-                success = launchDirectGame(game);
+            switch (game.getPlatform()) {
+                case STEAM:
+                    success = launchSteamGame(game);
+                    break;
+                case EPIC:
+                    success = launchEpicGame(game);
+                    break;
+                case SYSTEM:
+                    success = launchSystemGame(game);
+                    break;
+                default:
+                    success = launchDirectGame(game);
             }
 
             if (success) {
@@ -74,24 +80,187 @@ public class GameLauncher {
         String steamUrl = "steam://run/" + appId;
         System.out.println("[GameLauncher] Launching via Steam protocol: " + steamUrl);
 
-        // Use rundll32 to open the steam:// URL
-        ProcessBuilder pb = new ProcessBuilder(
-                "rundll32", "url.dll,FileProtocolHandler", steamUrl
-        );
-
+        // Use cmd /c start to open the steam:// URL - more reliable than rundll32
+        ProcessBuilder pb = new ProcessBuilder("cmd", "/c", "start", "", steamUrl);
+        pb.redirectErrorStream(true);
         Process process = pb.start();
 
-        // Don't wait for the process - Steam will handle it
-        // Just give it a moment to start
         Thread.sleep(500);
-
         System.out.println("[GameLauncher] Steam launch initiated for: " + game.getTitle());
         return true;
     }
 
     /**
-     * Launches a game directly via its executable.
-     * IMPORTANT: Sets the working directory to the game's folder.
+     * Launches an Epic game - tries protocol first, then direct.
+     */
+    private boolean launchEpicGame(Game game) throws IOException, InterruptedException {
+        String appId = game.getAppId();
+
+        // Try Epic protocol first
+        if (appId != null && !appId.isEmpty()) {
+            String epicUrl = "com.epicgames.launcher://apps/" + appId + "?action=launch&silent=true";
+            System.out.println("[GameLauncher] Trying Epic protocol: " + epicUrl);
+
+            try {
+                ProcessBuilder pb = new ProcessBuilder("cmd", "/c", "start", "", epicUrl);
+                pb.redirectErrorStream(true);
+                Process process = pb.start();
+                Thread.sleep(500);
+                System.out.println("[GameLauncher] Epic launch initiated for: " + game.getTitle());
+                return true;
+            } catch (Exception e) {
+                System.out.println("[GameLauncher] Epic protocol failed, trying direct launch");
+            }
+        }
+
+        return launchDirectGame(game);
+    }
+
+    /**
+     * Launches a system game with multiple fallback methods.
+     */
+    private boolean launchSystemGame(Game game) throws IOException, InterruptedException {
+        String title = game.getTitle().toLowerCase();
+
+        // Special handling for Riot Games (League, VALORANT, etc.)
+        if (title.contains("league") || title.contains("valorant") || title.contains("runeterra")) {
+            return launchRiotGame(game);
+        }
+
+        // Try direct launch first, with fallbacks
+        return launchDirectGameWithFallbacks(game);
+    }
+
+    /**
+     * Special launcher for Riot Games that uses their client.
+     */
+    private boolean launchRiotGame(Game game) throws IOException, InterruptedException {
+        String title = game.getTitle().toLowerCase();
+
+        // Try to launch via Riot Client
+        String[] riotClientPaths = {
+            "C:\\Riot Games\\Riot Client\\RiotClientServices.exe",
+            System.getenv("ProgramFiles") + "\\Riot Games\\Riot Client\\RiotClientServices.exe",
+            System.getenv("ProgramFiles(x86)") + "\\Riot Games\\Riot Client\\RiotClientServices.exe",
+            System.getenv("LOCALAPPDATA") + "\\Riot Games\\Riot Client\\RiotClientServices.exe"
+        };
+
+        String riotClientPath = null;
+        for (String path : riotClientPaths) {
+            if (path != null && new File(path).exists()) {
+                riotClientPath = path;
+                break;
+            }
+        }
+
+        if (riotClientPath != null) {
+            String productArg = "";
+            if (title.contains("league")) {
+                productArg = "league_of_legends";
+            } else if (title.contains("valorant")) {
+                productArg = "valorant";
+            } else if (title.contains("runeterra")) {
+                productArg = "bacon"; // Riot's internal code for LoR
+            }
+
+            if (!productArg.isEmpty()) {
+                System.out.println("[GameLauncher] Launching via Riot Client: " + productArg);
+                ProcessBuilder pb = new ProcessBuilder(
+                    riotClientPath,
+                    "--launch-product=" + productArg,
+                    "--launch-patchline=live"
+                );
+                pb.directory(new File(riotClientPath).getParentFile());
+                pb.redirectErrorStream(true);
+                pb.start();
+                System.out.println("[GameLauncher] Riot Client launch initiated for: " + game.getTitle());
+                return true;
+            }
+        }
+
+        // Fallback to direct launch
+        return launchDirectGameWithFallbacks(game);
+    }
+
+    /**
+     * Launches a game directly with multiple fallback methods to handle access issues.
+     */
+    private boolean launchDirectGameWithFallbacks(Game game) throws IOException, InterruptedException {
+        String exePath = game.getExecutablePath();
+
+        if (exePath == null || exePath.isEmpty()) {
+            throw new IOException("No executable path set for: " + game.getTitle());
+        }
+
+        File exeFile = new File(exePath);
+        if (!exeFile.exists()) {
+            throw new IOException("Executable not found: " + exePath);
+        }
+
+        File workingDir = exeFile.getParentFile();
+        System.out.println("[GameLauncher] Launching: " + exePath);
+        System.out.println("[GameLauncher] Working directory: " + workingDir.getAbsolutePath());
+
+        // Method 1: Try using cmd /c start (most compatible)
+        try {
+            System.out.println("[GameLauncher] Method 1: Using cmd /c start");
+            ProcessBuilder pb = new ProcessBuilder("cmd", "/c", "start", "", "/D",
+                workingDir.getAbsolutePath(), exeFile.getName());
+            pb.directory(workingDir);
+            pb.redirectErrorStream(true);
+            Process process = pb.start();
+            Thread.sleep(500);
+            System.out.println("[GameLauncher] Launch successful via cmd /c start");
+            return true;
+        } catch (Exception e) {
+            System.out.println("[GameLauncher] Method 1 failed: " + e.getMessage());
+        }
+
+        // Method 2: Try explorer.exe to open the file
+        try {
+            System.out.println("[GameLauncher] Method 2: Using explorer.exe");
+            ProcessBuilder pb = new ProcessBuilder("explorer.exe", exePath);
+            pb.redirectErrorStream(true);
+            Process process = pb.start();
+            Thread.sleep(500);
+            System.out.println("[GameLauncher] Launch successful via explorer.exe");
+            return true;
+        } catch (Exception e) {
+            System.out.println("[GameLauncher] Method 2 failed: " + e.getMessage());
+        }
+
+        // Method 3: Try PowerShell Start-Process
+        try {
+            System.out.println("[GameLauncher] Method 3: Using PowerShell");
+            ProcessBuilder pb = new ProcessBuilder("powershell", "-Command",
+                "Start-Process", "-FilePath", "'" + exePath + "'",
+                "-WorkingDirectory", "'" + workingDir.getAbsolutePath() + "'");
+            pb.redirectErrorStream(true);
+            Process process = pb.start();
+            Thread.sleep(500);
+            System.out.println("[GameLauncher] Launch successful via PowerShell");
+            return true;
+        } catch (Exception e) {
+            System.out.println("[GameLauncher] Method 3 failed: " + e.getMessage());
+        }
+
+        // Method 4: Direct ProcessBuilder (original method - might fail with access denied)
+        try {
+            System.out.println("[GameLauncher] Method 4: Direct ProcessBuilder");
+            ProcessBuilder pb = new ProcessBuilder(exePath);
+            pb.directory(workingDir);
+            pb.redirectErrorStream(true);
+            Process process = pb.start();
+            System.out.println("[GameLauncher] Launch successful via direct ProcessBuilder");
+            return true;
+        } catch (Exception e) {
+            System.out.println("[GameLauncher] Method 4 failed: " + e.getMessage());
+            throw new IOException("All launch methods failed for: " + game.getTitle() + ". Last error: " + e.getMessage());
+        }
+    }
+
+    /**
+     * Direct game launch (basic method).
      */
     private boolean launchDirectGame(Game game) throws IOException {
         String exePath = game.getExecutablePath();
@@ -105,43 +274,28 @@ public class GameLauncher {
             throw new IOException("Executable not found: " + exePath);
         }
 
-        // CRUCIAL: Set the working directory to the game's folder
-        // Many games crash if this is not set correctly
         File workingDir = exeFile.getParentFile();
 
-        System.out.println("[GameLauncher] Launching: " + exePath);
-        System.out.println("[GameLauncher] Working directory: " + workingDir.getAbsolutePath());
-
-        ProcessBuilder pb = new ProcessBuilder(exePath);
+        // Use cmd /c start for better compatibility
+        ProcessBuilder pb = new ProcessBuilder("cmd", "/c", "start", "", "/D",
+            workingDir.getAbsolutePath(), exeFile.getName());
         pb.directory(workingDir);
-
-        // Don't inherit IO - let the game run independently
         pb.redirectErrorStream(true);
+        pb.start();
 
-        // Start the process
-        Process process = pb.start();
-
-        // Don't wait for the process to complete - games are long-running
         System.out.println("[GameLauncher] Process started for: " + game.getTitle());
         return true;
     }
 
-    /**
-     * Updates the lastPlayed timestamp for a game.
-     */
     private void updateLastPlayed(Game game) {
         try {
             game.setLastPlayed(LocalDateTime.now());
             gameRepository.save(game);
-            System.out.println("[GameLauncher] Updated lastPlayed for: " + game.getTitle());
         } catch (Exception e) {
             System.err.println("[GameLauncher] Failed to update lastPlayed: " + e.getMessage());
         }
     }
 
-    /**
-     * Checks if a game can be launched.
-     */
     public boolean canLaunch(Game game) {
         if (game == null || game.getStatus() == Status.MISSING) {
             return false;
@@ -155,9 +309,6 @@ public class GameLauncher {
         return exePath != null && !exePath.isEmpty() && new File(exePath).exists();
     }
 
-    /**
-     * Opens the folder containing the game.
-     */
     public void openGameFolder(Game game) throws IOException {
         String path = game.getInstallPath();
         if (path == null || path.isEmpty()) {
@@ -171,13 +322,10 @@ public class GameLauncher {
             throw new IOException("Game folder not found");
         }
 
-        // Open in Windows Explorer
-        Runtime.getRuntime().exec("explorer.exe \"" + path + "\"");
+        ProcessBuilder pb = new ProcessBuilder("explorer.exe", path);
+        pb.start();
     }
 
-    /**
-     * Exception class for game launch errors.
-     */
     public static class GameLaunchException extends Exception {
         public GameLaunchException(String message) {
             super(message);
